--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,8 @@
         <module>homework6</module>
         <module>homework7</module>
         <module>homework8</module>
-        <module>homework9</module>
+<!--        <module>homework9</module>-->
+        <module>homework11</module>
     </modules>
 
     <properties>
