add Order as a DTO class and update poms

--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
         <module>homework11</module>
         <module>property-reader</module>
         <module>homework12</module>
+        <module>homework13</module>
     </modules>
 
     <properties>
