--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
         <module>property-reader</module>
         <module>homework12</module>
         <module>homework13</module>
+        <module>homework14</module>
     </modules>
 
     <properties>
