--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
         <module>homework13</module>
         <module>homework14</module>
         <module>homework15</module>
+        <module>homework16</module>
     </modules>
 
     <properties>
