--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
         <module>homework14</module>
         <module>homework15</module>
         <module>homework16</module>
+        <module>homework17</module>
     </modules>
 
     <properties>
