--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,7 @@
         <module>homework15</module>
         <module>homework16</module>
         <module>homework17</module>
+        <module>homework18</module>
     </modules>
 
     <properties>
