--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,7 @@
         <module>homework16</module>
         <module>homework17</module>
         <module>homework18</module>
+        <module>homework19</module>
     </modules>
 
     <properties>
