--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,7 @@
         <module>homework18</module>
         <module>homework19</module>
         <module>homework20</module>
+        <module>homework21</module>
     </modules>
 
     <properties>
