--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,7 @@
         <module>homework20</module>
         <module>homework21</module>
         <module>homework22</module>
+        <module>homework23</module>
     </modules>
 
     <properties>
