--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,7 @@
         <module>homework22</module>
         <module>homework23</module>
         <module>homework25</module>
+        <module>homework26</module>
     </modules>
 
     <properties>
