--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,9 @@
         <module>homework22</module>
         <module>homework23</module>
         <module>homework25</module>
+        <module>homework27-server</module>
+        <module>homework27-client</module>
+        <module>SOAP-Tomcat</module>
     </modules>
 
     <properties>
@@ -62,12 +65,6 @@
             <version>${mokhito.version}</version>
             <scope>test</scope>
         </dependency>
-        <!--        <dependency>-->
-        <!--            <groupId>org.jeasy</groupId>-->
-        <!--            <artifactId>easy-random-core</artifactId>-->
-        <!--            <version>${easy-random.vertion}</version>-->
-        <!--            <scope>test</scope>-->
-        <!--        </dependency>-->
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
@@ -117,18 +114,6 @@
                 <artifactId>maven-project-info-reports-plugin</artifactId>
                 <version>${maven-project-info-reports-plugin.version}</version>
             </plugin>
-            <!--            <plugin>-->
-            <!--                <artifactId>maven-surefire-plugin</artifactId>-->
-            <!--                <version>${surefire.version}</version>-->
-            <!--                <configuration>-->
-            <!--                    <excludes>-->
-            <!--                        <exclude>**/integration/*Test.java</exclude>-->
-            <!--                    </excludes>-->
-            <!--                    <includes>-->
-            <!--                        <include>*Test.java</include>-->
-            <!--                    </includes>-->
-            <!--                </configuration>-->
-            <!--            </plugin>-->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-failsafe-plugin</artifactId>
